@@ -4,26 +4,10 @@ import java.util.ArrayList;
 
 public class MeerkeuzeQuizVraag extends QuizVraag {
 
-    private ArrayList<String> antwoorden = new ArrayList<>();
+    private final ArrayList<String> antwoorden;
 
     public MeerkeuzeQuizVraag(String vraagTekst, boolean isActueel, int vraagId, Categorie categorie, ArrayList<String> antwoorden) {
         super(vraagTekst, isActueel, vraagId, categorie);
-        this.antwoorden = antwoorden;
-    }
-
-    public void addAntwoord(String antwoord) {
-        antwoorden.add(antwoord);
-    }
-
-    public void removeAntwoord(String antwoord) {
-        antwoorden.remove(antwoord);
-    }
-
-    public ArrayList<String> getAntwoorden() {
-        return antwoorden;
-    }
-
-    public void setAntwoorden(ArrayList<String> antwoorden) {
         this.antwoorden = antwoorden;
     }
 
@@ -34,8 +18,8 @@ public class MeerkeuzeQuizVraag extends QuizVraag {
 
     private String getAntwoordenString() {
         StringBuilder sb = new StringBuilder();
-        if (antwoorden.size() > 0) {
-            sb.append("A: ").append(antwoorden.get(0)).append("\n");
+        if (!antwoorden.isEmpty()) {
+            sb.append("A: ").append(antwoorden.getFirst()).append("\n");
         }
         if (antwoorden.size() > 1) {
             sb.append("B: ").append(antwoorden.get(1)).append("\n");
